# rostango

./: CMakeLists.txt  LICENSE  human.urdf  package.xml
mocap_data/: 18Nodes.txt  bodyLeftArm.txt  halfBody.txt  lowerBodyFull.txt  noArms.txt  noHands.txt  record.txt
models/: rvizConfig.rviz
models/humanMeshed/meshes/: abdomen.dae  chest.dae  head.dae  kafa.stl  kalca.stl  leftBicep.dae  leftClavicle.dae  leftFoot.dae  leftForearm.dae  leftHand.dae  leftShin.dae  leftThigh.dae  neck.dae  pelvis.dae  rightBicep.dae  rightClavicle.dae  rightFoot.dae  rightForearm.dae  rightHand.dae  rightShin.dae  rightThigh.dae
models/humanMeshed/robots/: abomination.urdf  abominationv2.urdf  human.urdf  humanDefaultOdom.urdf  humanMeshed.urdf  humanMeshedAligned.urdf  humanMeshedModified.urdf  humanMeshedv2.urdf  humanModifiedOdom.urdf
models/humanMeshed_moveit_config/: ._package.xml  .setup_assistant  CMakeLists.txt  package.xml
models/humanMeshed_moveit_config/config/: fake_controllers.yaml  humanMeshed.srdf  joint_limits.yaml  ompl_planning.yaml
models/humanMeshed_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
models/moveit/: .setup_assistant  package.xml
models/moveit/config/: fake_controllers.yaml  humanMeshed.srdf  joint_limits.yaml  ompl_planning.yaml
models/moveit/launch/: demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
msg/: frame_message.msg  frame_message.msg~  frame_message_multi.msg~  imitated_tempo_message.msg  scale_and_cast.msg  scale_and_cast.msg~
networks/: beat_ros_pseye.n  beat_ros_pseye_Multi.n  beat_ros_pseye_confidence.n  beat_ros_pseye_rely.n
online_tempo/: CMakeLists.txt  CMakeLists.txt~  human.xml  humanJoints.urdf  package.xml  package.xml~
online_tempo/mocap_data/: fullBody.txt  spineAndLower.txt
online_tempo/models/humanMeshed/meshes/: leftFoot.dae
online_tempo/models/humanMeshed/robots/: humanMeshed.urdf
online_tempo/msg/: frame_message.msg  frame_message_burst.msg  joint_message.msg
online_tempo/networks/: beat_ros_pseye_confidence.n
online_tempo/src/: animate.cpp  animateFull.cpp  broadcastPepper.cpp  integrated.cpp  jointState.cpp  tempoMatch.cpp  test.cpp
online_tempo/src/headers/: Song.h
src/: abominationBroadcast.cpp  animate.cpp  animateFull.cpp  armRotateHuman.cpp  broadcast.cpp  broadcastJoints.cpp  broadcastPepper.cpp  broadcastPrimitive.cpp  elbowRotate.cpp  elbowRotateKinematic.cpp  harkMessage.cpp  hark_msg_stamper.cpp  imitated_tempo_input.cpp  imitated_tempo_publisher.cpp  integrated.cpp  jointState.cpp  naoHumanMapped.cpp  tempoMatch.cpp  tempoMatchCustom.cpp  tempoMatchMulti.cpp
src/NAOKinematics-master/Cpp/NAOH25/: NAOKinematics
src/headers/: EditCSV.h  Movement.h
src/naoKinematics/: KMat.hpp  Makefile  naoIKTest.cpp
